--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main # or master, depending on your default branch name
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -31,3 +37,4 @@ jobs:
           branch: public # The branch to deploy to
           folder: dist # The folder the action should deploy
           clean: true # Automatically remove deleted files from the deployment
+          token: ${{ secrets.GITHUB_TOKEN }} # Use the automatic token
